Fixed wrong colors

--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,12 @@ a img{
 }
 
 ::-moz-selection {
-  background-color: #6ab344;
+  background-color: #19CC87;
   color: #fff;
 }
 
 ::selection {
-  background-color: #6ab344;
+  background-color: #19CC87;
   color: #fff;
 }
 
@@ -126,7 +126,7 @@ a img{
   }
 
     .android-navigation .mdl-navigation__link:hover {
-      border-bottom: 4px solid #8bc34a;
+      border-bottom: 4px solid #19CC87;
     }
 
   .android-search-box {
@@ -160,12 +160,12 @@ a img{
   }
 
   .android-drawer span.mdl-navigation__link.mdl-navigation__link {
-    color: #8bc34a;
+    color: #19CC87;
   }
 
   .android-drawer .mdl-layout-title {
     position: relative;
-    background: #6ab344;
+    background: #19CC87;
     height: 160px;
   }
 
@@ -333,11 +333,11 @@ a img{
 
 .android-link {
   text-decoration: none;
-  color: #8bc34a !important;
+  color: #19CC87 !important;
 }
 
   .android-link:hover {
-    color: #7cb342 !important;
+    color: #19CC87 !important;
   }
 
   .android-link .material-icons {
@@ -544,6 +544,7 @@ a img{
 
 a {
     text-decoration: none;
+    color: #19CC87;
 }
 ::-webkit-scrollbar {
   display: none;
